# imgk

./: .gitignore  CMakeLists.txt
imgk/: CMakeLists.txt
imgk/include/imgk/: Image.h
imgk/src/imgk/: Image.cpp
playground/: CMakeLists.txt  playground.cpp
schrift/: CMakeLists.txt
schrift/include/schrift/: schrift.h
schrift/src/: schrift.cpp
